ecmascript/parser/tests/typescript-errors/tsc/es7/exponentiationOperator/exponentiationOperatorInTemplateStringWithSyntaxError3/input.ts.stderr
error: ** cannot be applied to unary expression
 --> $DIR/tests/typescript-errors/tsc/es7/exponentiationOperator/exponentiationOperatorInTemplateStringWithSyntaxError3/input.ts:9:8
  |
9 | `${-t1 ** t2 - t1} world`;
  |        ^^

